[project]
name = "jamba"
version = "0.1.0"
description = "jamba - Pytorch"
license = "MIT"
authors = ["Mayank Bhaskar <mayankbhaskar007@gmail.com>"]
homepage = "https://github.com/cataluna84/jamba"
documentation = "https://github.com/cataluna84/jamba" 
readme = "README.md"
repository = "https://github.com/cataluna84/jamba"
keywords = ["artificial intelligence", "deep learning", "optimizers", "Prompt Engineering"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12"
]
requires-python = ">=3.12"
dependencies = []
